<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="match_parent"
  android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <TextView
    android:id="@+id/label_date"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:text="@string/msg_forecast"
    android:textColor="@color/colorPrimary"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/label_temp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:text="@string/msg_temp"
    app:layout_anchorGravity="left"
    app:layout_constraintBottom_toTopOf="@+id/label_temp_max"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/label_date"
    app:layout_constraintVertical_chainStyle="spread_inside" />

  <TextView
    android:id="@+id/label_temp_max"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/label_temp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:text="@string/msg_max_temp"
    app:layout_anchorGravity="center"
    app:layout_constraintBottom_toTopOf="@+id/label_temp_min"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/label_temp" />

  <TextView
    android:id="@+id/label_temp_min"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/label_temp_min"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:text="@string/msg_min_temp"
    app:layout_anchorGravity="right"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/label_temp_max" />

</android.support.constraint.ConstraintLayout>
