<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".SearchActivity">

<android.support.v7.widget.Toolbar
  android:id="@+id/toolbar"
  android:layout_width="match_parent"
  android:layout_height="?attr/actionBarSize"
  android:background="?attr/colorPrimary"
  android:fitsSystemWindows="true"
  app:popupTheme="@style/AppTheme.PopupOverlay">

  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
      android:id="@+id/toolbar_title"
      style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
      android:layout_width="wrap_content"
      android:layout_height="fill_parent"
      android:layout_marginEnd="?attr/actionBarSize"
      android:gravity="center_vertical"
      android:orientation="horizontal"
      android:text="@string/title_search_activity" />

    <ImageButton
      android:id="@+id/btn_search"
      style="@style/Widget.AppCompat.ActionButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="end|center_vertical"
      android:layout_marginStart="?attr/actionBarSize"
      android:background="@color/colorPrimary"
      android:onClick="searchMapAction"
      android:src="@drawable/baseline_search_white_24" />
  </FrameLayout>
</android.support.v7.widget.Toolbar>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical" >

      <android.support.v7.widget.CardView
        android:id="@+id/cardview_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/colorBackground"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_margin="8dp"
          android:orientation="vertical">

          <TextView
            android:id="@+id/title_search_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_search_city"
            android:textColor="@color/colorPrimary" />

          <EditText
            android:id="@+id/city_name"
            style="@style/Base.Widget.MaterialComponents.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_search_name_city"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:singleLine="true" />

          <Spinner
            android:id="@+id/country_code_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/iso_3166"
            android:spinnerMode="dropdown" />

          <Button
            android:id="@+id/btn_search_name"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="searchCityByName"
            android:text="@string/title_button_search"
            android:textColor="@color/colorAccent" />
        </LinearLayout>


      </android.support.v7.widget.CardView>

      <android.support.v7.widget.CardView
        android:id="@+id/cardview_zipcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/colorBackground"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_margin="8dp"
          android:orientation="vertical">

          <TextView
            android:id="@+id/title_search_zipcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_search_zipcode"
            android:textColor="@color/colorPrimary" />

          <EditText
            android:id="@+id/zipcode"
            style="@style/Base.Widget.MaterialComponents.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_search_zipcode"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:singleLine="true" />

          <Spinner
            android:id="@+id/country_code_zipcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/iso_3166"
            android:spinnerMode="dropdown" />

          <Button
            android:id="@+id/btn_search_zipcode"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="searchCityByZipcode"
            android:text="@string/title_button_search"
            android:textColor="@color/colorAccent" />
        </LinearLayout>


      </android.support.v7.widget.CardView>
    </LinearLayout>
  </ScrollView>

</LinearLayout>